refactor Point to have long coordinates, update solutions + answers